[project]
name = "lsslib"
authors = [
    {name = "Nathan Maxwell"}
]
description = "Library and CLI tool for grouping sequential files."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3.10",
]
dependencies = [
    'importlib-metadata; python_version<"3.10"'
]
version = "0.5.0"

[project.scripts]
lss = "lsslib.lss:main"

[tool.pytest.ini_options]
pythonpath = ["."]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
